5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1679_1880.log
== TEST (2019-04-25 17:03:56) 
-- CODE:
var=int(input("valor inteiro:"))

if (var=1):
	print("janeiro")
elif(var=2):
	print("fevereiro")
elif(var=3):
	print("marco")
elif(var=4):
	print("abril")
elif(var=5):
	print("maio")
elif(var=6):
	print("junho")
elif(var=7):
	print("julho")
elif(var=8):
	print("agosto")
elif(var=9):
	print("setembro")
elif(var=10):
	print("outubro")
elif(var=11):
	print("novembro")
elif(var=12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 3
    if (var=1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:04:16) 
-- CODE:
var=int(input("valor inteiro:"))

if (var==1):
	print("janeiro")
elif(var==2):
	print("fevereiro")
elif(var==3):
	print("marco")
elif(var==4):
	print("abril")
elif(var==5):
	print("maio")
elif(var==6):
	print("junho")
elif(var==7):
	print("julho")
elif(var==8):
	print("agosto")
elif(var==9):
	print("setembro")
elif(var==10):
	print("outubro")
elif(var==11):
	print("novembro")
elif(var==12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:04:23) 
-- CODE:
var=int(input("valor inteiro:"))

if (var==1):
	print("janeiro")
elif(var==2):
	print("fevereiro")
elif(var==3):
	print("marco")
elif(var==4):
	print("abril")
elif(var==5):
	print("maio")
elif(var==6):
	print("junho")
elif(var==7):
	print("julho")
elif(var==8):
	print("agosto")
elif(var==9):
	print("setembro")
elif(var==10):
	print("outubro")
elif(var==11):
	print("novembro")
elif(var==12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:04:27) 
-- CODE:
var=int(input("valor inteiro:"))

if (var==1):
	print("janeiro")
elif(var==2):
	print("fevereiro")
elif(var==3):
	print("marco")
elif(var==4):
	print("abril")
elif(var==5):
	print("maio")
elif(var==6):
	print("junho")
elif(var==7):
	print("julho")
elif(var==8):
	print("agosto")
elif(var==9):
	print("setembro")
elif(var==10):
	print("outubro")
elif(var==11):
	print("novembro")
elif(var==12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:04:31) 
-- CODE:
var=int(input("valor inteiro:"))

if (var==1):
	print("janeiro")
elif(var==2):
	print("fevereiro")
elif(var==3):
	print("marco")
elif(var==4):
	print("abril")
elif(var==5):
	print("maio")
elif(var==6):
	print("junho")
elif(var==7):
	print("julho")
elif(var==8):
	print("agosto")
elif(var==9):
	print("setembro")
elif(var==10):
	print("outubro")
elif(var==11):
	print("novembro")
elif(var==12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:04:34) 
-- CODE:
var=int(input("valor inteiro:"))

if (var==1):
	print("janeiro")
elif(var==2):
	print("fevereiro")
elif(var==3):
	print("marco")
elif(var==4):
	print("abril")
elif(var==5):
	print("maio")
elif(var==6):
	print("junho")
elif(var==7):
	print("julho")
elif(var==8):
	print("agosto")
elif(var==9):
	print("setembro")
elif(var==10):
	print("outubro")
elif(var==11):
	print("novembro")
elif(var==12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.160148
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
